Remove all white spaces in userInput

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /CommandLineCalculator/nbproject/
 /CommandLineCalculator/build.xml
 /CommandLineCalculator/manifest.mf
+/CommandLineCalculator/build/
