--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /CommandLineCalculator/build.xml
 /CommandLineCalculator/manifest.mf
 /CommandLineCalculator/build/
+/NumberGuessingGame/nbproject/private/
