Welcome the user and take the input from the user

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /CommandLineCalculator/manifest.mf
 /CommandLineCalculator/build/
 /NumberGuessingGame/nbproject/private/
+/NumberGuessingGame/build/
