--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /CommandLineCalculator/build/
 /NumberGuessingGame/nbproject/private/
 /NumberGuessingGame/build/
+/PasswordGenerator/nbproject/private/
+/PasswordGenerator/build/
