--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /PasswordGenerator/nbproject/private/
 /PasswordGenerator/build/
 /RockPaperScissors/nbproject/private/
+/RockPaperScissors/build/
+/WordCount/nbproject/private/
